# 2D-Game-Engine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  attribute.hpp  collision_handler.cpp  collisions.hpp  control.cpp  control_handler.hpp  death_handler.cpp  gravity.hpp  init.hpp  main.cpp  movement.cpp  property.hpp  scaling.cpp  scaling.hpp  server.cpp  server.hpp  sideboundary_handler.hpp  space_invader.cpp  timeline.cpp  vcpkg.json
.github/workflows/: build.yml
cmake/: CompilerWarnings.cmake
core/: event.hpp  game.hpp  init.cpp
engine/: CMakeLists.txt
engine/core/: Clock.cpp  Clock.hpp  Engine.cpp  Engine.hpp  Logger.cpp  Logger.hpp  Window.cpp  Window.hpp
engine/math/: Math.hpp  Rect.hpp  Vec2.hpp
game/: CMakeLists.txt  main.cpp
handlers/: collision_handler.hpp  control_handler.cpp  death_handler.hpp  sideboundary_handler.cpp
include/: attribute.hpp  collision_handler.hpp  collisions.hpp  control.hpp  control_handler.hpp  death_handler.hpp  deathzone.hpp  entity.hpp  event.hpp  eventhandler.hpp  eventmanager.hpp  game.hpp  gravity.hpp  movement.hpp  peer.hpp  platform.hpp  property.hpp  render.hpp  scaling.hpp  sideboundary.hpp  spawnpoint.hpp  timeline.hpp
modules/: collisions.cpp  control.hpp  deathzone.cpp  deathzone.hpp  movement.hpp  platform.cpp  platform.hpp  sideboundary.hpp  spawnpoint.cpp  spawnpoint.hpp
networking/: peer.cpp  peer.hpp
rendering/: render.cpp
scripts/: setup.ps1  setup.sh
src/core/: eventmanager.cpp  game.cpp  init.cpp  timeline.cpp
src/handlers/: collision_handler.cpp  control_handler.cpp  death_handler.cpp  sideboundary_handler.cpp
src/modules/: collisions.cpp  control.cpp  deathzone.cpp  gravity.cpp  movement.cpp  platform.cpp  sideboundary.cpp
src/networking/: peer.cpp
src/rendering/: render.cpp  scaling.cpp
tests/: CMakeLists.txt
tests/math/: test_vec2.cpp
